# Luminari-Source

./: .accepted  .clang-format  .clang-tidy  .cursorignore  .cursorrules  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  AI_SERVICE_README.md  AI_TODO.md  AUTHORS  A_MYSQL_AUDIT_TODO.md  BARD_SPELLSINGER_TIER2_IMPLEMENTATION.md  BARD_SPELLSINGER_TIER4_DESIGN.md  BARD_WARCHANTER_COMPLETE_SUMMARY.md  BARD_WARCHANTER_TIER2_IMPLEMENTATION.md  BARD_WARCHANTER_TIER3_IMPLEMENTATION.md  BARD_WARCHANTER_TIER4_IMPLEMENTATION.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONFIG_AUDIT.md  CONFIG_ISSUES.md  CONTRIBUTING.md  COPYING  ChangeLog  DEVICE_DC_PENALTY_IMPLEMENTATION.md  DG_SCRIPT_FIXES_NEEDED.md  FIX_MESS.md  FRESH_INSTALL_PROBS.md  HUNTERS_ARSENAL_T2_SELECTION_SYSTEM.md  KNIGHTS_OF_SOLAMNIA_COMBINED.md  KNIGHT_IMPLEMENTATION_COMPLETE.md  KNIGHT_IMPLEMENTATION_STEPS.md  LEAK_FIX_PLAN.md  LICENSE  (+349 more)
.claude/: settings.local.json
.cursor/: extensions.json  settings.json
.github/: auto_assign.yml  dependabot.yml
.spec_system/: CONSIDERATIONS.md  CONVENTIONS.md  docs-audit.md  state.json
cnf/: configure.ac  configure.in
docs/: ARTISAN_POINTS_SYSTEM.md  BERSERKER_PRIMAL_WARRIOR_INTEGRATION.md  BERSERKER_RAVAGER_TIER_3_4_IMPLEMENTATION.md  BOARD_COMMAND_REGISTRATION_FIX.md  BOARD_REPLY_DISCONNECT_FIX.md  CHANGELOG.md  CMAKE_BUILD_GUIDE.md  CODEOWNERS  CONFIG_ISSUES.md  CRAFTING_STATIONS_IMPLEMENTATION.md  DEPLOYMENT_LOG.md  DRUID_NATURES_WARRIOR_TIER3_4_IMPLEMENTATION.md  DRUID_PERKS_IMPLEMENTATION.md  DRUID_SEASONS_HERALD_TIER1_2_IMPLEMENTATION.md  DUPLICATE_TALENTS_FIX.md  FORCED_SHORT_DESC_IMPLEMENTATION.md  GETTING_STARTED.md  GOLEM_CHANGELOG.md  GOLEM_IMPLEMENTATION_SUMMARY.md  GOLEM_SYSTEM.md  INQUISITOR_PERKS.md  INQUISITOR_PERKS_IMPLEMENTATION.md  INQUISITOR_PERKS_TIER2_IMPLEMENTATION.md  MSDP_VARIABLES.html  MYSQL_BOARDS_COMPLETE_SUMMARY.md  PALADIN_PERK_SYSTEM.md  PALADIN_TIER_3_4_PERKS_IMPLEMENTATION.md  PVP_COOLDOWN_DISPLAY.md  PVP_FLAG_IMPLEMENTATION.md  PVP_TIMER_INITIALIZATION_FIX.md  RANGER_HUNTER_TREE_IMPLEMENTATION.md  SHORT_DESCRIPTION_REQUIREMENT.md  SPELL_HTML_CLASS_INFO_UPDATE.md  SPELL_HTML_GENERATOR.md  TALENT_SYSTEM.md  TASK_LIST.md  TECHNICAL_DOCUMENTATION_MASTER_INDEX.md  TEMPLATE_DOC_AUDIT_v2.1.md  VESSEL_BENCHMARKS.md  VESSEL_SYSTEM.md  (+7 more)
documentation/: (In Progress) Current Gear Stats Distribution.xlsx  Attaching to Wilderness.docx  BUGS.md  CHANGELOG.md  CHANGELOG_2025_07_24.md  CONSOLIDATION_COMPLETE.md  CORE_SERVER_ARCHITECTURE.md  DEVELOPER_GUIDE_AND_API.md  DOCUMENTATION_AUDIT_SUMMARY.md  DOCUMENTATION_INDEX.md  IDEAS.md  IDEAS_VALIDATED.md  IDEA_LIST.md  Luminari - Armor Notes.docx  PHP_TOOLS_README.md  Points Standards.xlsx  README.md  SETUP_AND_BUILD_GUIDE.md  Stat Distribution on Gear Drops.xlsx  Stats_by_Wear_Location_2022-02-23.xlsx  Stylistics.docx  TASK_LIST.md  TECHNICAL_DOCUMENTATION_MASTER_INDEX.md  TROUBLESHOOTING_AND_MAINTENANCE.md  Writing Guide.docx  armor_information.md  crafting-notes.md  stat_distribute_on_gear_drop.md  valgrind_log.md
lib/: .env_example  IMPORT_DB.md  WILD_KB.md  ai_service_migration.sql  dynamic_descriptions_deployment.sql  i3_config.example  mysql_config_example  pubsub_v3_schema.sql  region_effects_system.sql  resource_depletion_schema.sql
misc/: typos.capped-2020-06-01
mysql/: decimal.h  errmsg.h  m_ctype.h  m_string.h  my_alloc.h  my_attribute.h  my_config.h  my_dbug.h  my_dir.h  my_global.h  my_no_pthread.h  my_pthread.h  my_sys.h  mysql.h  mysql_embed.h  mysql_version.h  sql_common.h  sslopt-case.h  sslopt-vars.h  typelib.h
nbproject/: Package-Default.bash  Package-home_config.bash  configurations.xml  project.xml
rtree/: card.c  card.h  index.c  node.c  rTreeIndex.h  rectangle.c  split_l.c  split_l.h  split_q.c.bak  split_q.h.bak
scripts/: .gdbcommands.qkWSCy  .gdbcommands.t7Dy1S  .gdbinit_mud.FVAt9A  backup.sh  check_permissions.sh  copyover_watchdog.sh  debug_game.sh  deploy.sh  enhanced_copyover_diagnostic.sh  fix_permissions.sh  move_bin.sh  setup.sh  setup_mariadb_sudoers.sh  simple_setup.sh  start_mariadb.sh  vgrind.sh
sql/: GENERATE_SQL_SCHEMA.md  ai_region_hints_schema.sql  insert_room_templates.sql  master_schema.sql  narrative_weaver_installation.sql  perks_rogue_assassin_t1_t2.sql  region_description_schema.sql  schedule_tables.sql  vessels_phase2_rollback.sql  vessels_phase2_schema.sql  waypoint_tables.sql
src/: .gitignore  BREW_HELP_HTML.html  PULL_MISSING_DIRECTORIES_FILES.md  STAFF_EVENT_AUDIT.md  account.c  account.h  act.comm.c  act.comm.do_spec_comm.c  act.h  act.informative.c  act.item.c  act.movement.c  act.offensive.c  act.other.c  act.social.c  act.wizard.c  actionqueues.c  actionqueues.h  actions.c  actions.h  aedit.c  ai_cache.c  ai_events.c  ai_region_hints.c  ai_region_hints.h  ai_security.c  ai_service.c  ai_service.h  alchemy.c  alchemy.h  asciimap.c  assign_wpn_armor.c  assign_wpn_armor.h  backgrounds.c  backgrounds.h  ban.c  ban.h  bardic_performance.c  bardic_performance.h  bedit.c  (+335 more)
unittests/: mocks.c  (+9 more)
util/: Makefile  Makefile.am  Makefile.in  README.md  asciipasswd.c  autoload.php  autowiz.c  bonus_breakdown.php  bonuses.php  check_permissions.sh  check_score_help  check_score_help.c  config.php  debug_mysql_exact  debug_mysql_exact.c  depend  enter_encounter.php  enter_hunt.php  enter_spell_help.php  export_objectdb_to_json.py  fix_permissions.sh  generate_spell_html.sh  generate_spell_html_detailed.py  hl_events.c  hl_events.h  mysql_fix.patch  plrtoascii.c  plrtoascii.c.2  rebuildAsciiIndex.c  rebuildMailIndex.c  scheck  shopconv.c  sign.c  spelllist_html  spelllist_html.c  split.c  terrain_api_client.py  test_exact_replication  test_exact_replication.c  test_lower_issue  (+12 more)
util/ai_ollama_llama/: host_your_llm.md
util/aider/: aider_config_template.md  aider_generic_config_template.md  aider_setup.md  conf.example.yml
util/claude_code/: CLAUDE.example.md  claude_hooks.md  claude_subagents.md
util/powershell/: Install-Profile.ps1  ProfileTemplate.ps1  README.md  Remove-Profile.ps1
(+869 files in other folders)
